--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm-run-all": "^4.1.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.15.1"
   },
   "scripts": {
@@ -25,6 +26,7 @@
     "@types/node": "^9.6.6",
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
+    "@types/react-router-dom": "^4.2.6",
     "typescript": "^2.8.3"
   }
 }
